--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,5 @@
 # Devfile for OpenShift Dev Spaces to develop an Electron app
-# Uses your custom Dev Spaces UDI base image with Electron system deps.
-# 1) Push your built image to a registry accessible by your cluster
+# Uses a fixed custom image with Electron system deps.
 
 schemaVersion: 2.2.0
 metadata:
@@ -49,6 +48,13 @@ commands:
         kind: run
         isDefault: false
 
+  - id: start-display
+    composite:
+      label: Initialize display server
+      commands:
+        - start-xvfb
+      parallel: false
+
   - id: npm-install
     exec:
       component: tools
@@ -83,4 +89,4 @@ commands:
 
 events:
   postStart:
-    - start-xvfb
+    - start-display
